--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "firebase": "^12.4.0",
     "lucide-react": "^0.546.0",
@@ -25,6 +27,7 @@
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.65.0",
     "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
