feat: Complete Firebase integration and BBQ-themed UI system
- Firebase Auth, Firestore, Storage fully configured
- BBQ-themed color palette (light/dark modes)
- shadcn/ui components library
- /dev testing environment with component showcase
- Notification system with toast playground
- Tailwind CSS v4 migration
- Complete TypeScript types
- Cloudinary integration
- TanStack Query optimization
- Comprehensive documentation

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,92 @@
+# ================================================
 # Firebase Configuration
+# ================================================
+# Obtener estas credenciales desde:
+# Firebase Console > Project Settings > General > Your apps > Web app
+# https://console.firebase.google.com/
+
+# API Key de Firebase (Público - es seguro en frontend)
 NEXT_PUBLIC_FIREBASE_API_KEY=
+
+# Auth Domain (formato: proyecto-id.firebaseapp.com)
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=
+
+# Project ID de Firebase
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=
+
+# Storage Bucket (formato: proyecto-id.appspot.com)
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=
+
+# Messaging Sender ID (número de 12 dígitos)
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
+
+# App ID (formato: 1:123456789012:web:abcdef123456)
 NEXT_PUBLIC_FIREBASE_APP_ID=
+
+# Measurement ID de Analytics (opcional - formato: G-XXXXXXXXXX)
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=
 
+# ================================================
+# Firebase Cloud Messaging (FCM) - DEPRECATED
+# ================================================
+# NOTA: FCM requiere plan Blaze (pago)
+# Usar en su lugar: Sistema de notificaciones in-app (lib/notifications)
+# VAPID Key para notificaciones push web
+# Obtener desde: Firebase Console > Project Settings > Cloud Messaging > Web Push certificates
+# Hacer clic en "Generate key pair" si no existe
+# NEXT_PUBLIC_FIREBASE_VAPID_KEY=
+
+# ================================================
+# Firebase Emulator (Desarrollo)
+# ================================================
+# Habilitar emuladores de Firebase para desarrollo local
+# true = Usar emuladores locales (sin consumir cuota)
+# false = Usar servicios de producción en Firebase
+NEXT_PUBLIC_USE_FIREBASE_EMULATOR=false
+
+# ================================================
 # App Configuration
+# ================================================
+# URL base de la aplicación
+# Desarrollo: http://localhost:3000
+# Producción: https://tu-dominio.com
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# Entorno de la aplicación
+NODE_ENV=development
+
+# ================================================
+# Cloudinary Configuration (ALTERNATIVA GRATUITA)
+# ================================================
+# Plan gratuito: 25GB storage + 25GB bandwidth/mes
+# Obtener credenciales desde: https://cloudinary.com/console
+# Guia de setup: docs/cloudinary/SETUP.md
+
+# Cloud Name (Publico)
+# Se encuentra en: Dashboard > Account Details > Cloud name
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
+
+# API Key (Publico para unsigned uploads)
+# Se encuentra en: Dashboard > Account Details > API Key
+NEXT_PUBLIC_CLOUDINARY_API_KEY=
+
+# API Secret (SOLO BACKEND - NO exponer en frontend)
+# Se encuentra en: Dashboard > Account Details > API Secret
+# Usar solo en API routes de Next.js para operaciones firmadas
+CLOUDINARY_API_SECRET=
+
+# Upload Preset (REQUERIDO para uploads sin firma)
+# Crear en: Settings > Upload > Upload presets > Add upload preset
+# Configurar como "unsigned" para permitir uploads desde el frontend
+# Guia: docs/cloudinary/SETUP.md#crear-upload-preset
+NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET=
+
+# ================================================
+# Development Pages Access (SOLO DESARROLLO)
+# ================================================
+# Clave secreta para acceder a páginas de desarrollo (/dev/*)
+# Estas páginas incluyen:
+# - /dev/tests - Pruebas de código
+# - /dev/playground - Playground de componentes
+# IMPORTANTE: Cambiar en producción o eliminar estas páginas
+
