--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lucide-react": "^0.546.0",
     "next": "^15.5.6",
     "next-cloudinary": "^6.16.2",
+    "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.65.0",
